[CDAP-13915][CDAP-13916] Fixes pipelines not showing up in profiles, and makes them clickable - Fixes API call to backend - Makes pipeline row clickable - Hardcodes program type to 'Workflow' if not available (this is the case for schedules) - Adds section label to assosciations section

--- a/cdap-ui/app/cdap/components/Cloud/Profiles/DetailView/Content/ProfileAssociations/ProfileAssociations.scss
+++ b/cdap-ui/app/cdap/components/Cloud/Profiles/DetailView/Content/ProfileAssociations/ProfileAssociations.scss
@@ -29,10 +29,15 @@
       margin-bottom: 0;
     }
   }
+  .section-label {
+    margin-top: 15px;
+    margin-bottom: 5px;
+  }
   .grid.grid-container {
     max-height: none;
     .grid-row {
       grid-template-columns: 1.5fr 1fr 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      color: $grey-01;
     }
     .grid-header {
       .grid-row {
